# ros_pea_car

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_pea_car.yaml
cv_test/: yolo_detector.py
launch/: amcl.launch  common.launch  display.launch  gazebo.launch  map_amcl.launch  map_read.launch  map_save.launch  move_base.launch  navigation.launch  no_control_gazebo.launch  slam_gmapping.launch  slam_navigation.launch
map/: nav.pgm  nav.yaml
meshes/: left1.STL  left2.STL  right1.STL  right2.STL
param/: base_local_planner_params.yaml  costmap_common_params.yaml
src/: controller_node.cpp  gazebo_control.cpp  pea_car_control.cpp
urdf/: car_zhao.urdf  gazebo_move.urdf  gazebo_move_zhao.urdf  pea_car.csv  pea_car.gv  pea_car.urdf
worlds/: big_room.world  room1.world
worlds/Untitled/: model.sdf
