<package format="2">
  <name>pea_car</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for pea_car</p>
    <p>This package contains configuration data, 3D models and launch files
for pea_car robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>torch</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>torch</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>